k8s-deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  rules:
  - host: test-app.ci.com
    http:
      paths:
      - backend:
          serviceName: test-app-front-service
          servicePort: front
        path: /
      - backend:
          serviceName: test-app-back-service
          servicePort: back
        path: /TestApi
